# jni-sample

./: README.md
java/src/main/java/sample/: SayHello.java
native/: CMakeLists.txt
native/lib1/: func1.cpp  func1.h  sample_SayHello.h
native/lib2/: func2.cpp  func2.h
native/pathstub/: exp.h  pathstub.cpp
